--- a/src/Layout/Components/AlertContainer.razor
+++ b/src/Layout/Components/AlertContainer.razor
@@ -1,6 +1,6 @@
 ﻿<div class="row justify-content-center align-content-center">
     <div id="alertContainer">
-        @foreach (var message in Alerts)
+        @foreach (var message in alerts)
         {
             <Alert Message="message"></Alert>
         }
