--- a/src/Layout/Components/LeftSideBar.razor
+++ b/src/Layout/Components/LeftSideBar.razor
@@ -1,7 +1,7 @@
 ﻿<div id="leftSideBarContainer" class="row align-items-center justify-content-center me-3">
     <div class="h-100 w-100 bg-primary text-light">
         <div class="sidenav mt-4">
-            @foreach (var group in Links)
+            @foreach (var group in links)
             {
                 if (group.Links.Count == 1)
                 {
