--- a/src/Layout/Components/NavBar.razor
+++ b/src/Layout/Components/NavBar.razor
@@ -3,7 +3,7 @@
         <a class="navbar-brand" href="#">Navbar</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                @foreach (var group in Links)
+                @foreach (var group in TopNavLinks.Links)
                 {
                     if (group.Links.Count == 1)
                     {
