--- a/src/Layout/Components/Notification.razor
+++ b/src/Layout/Components/Notification.razor
@@ -1,4 +1,4 @@
-﻿<div id="@Id" class="@(AnimationClass)">
+﻿<div id="@Id" class="@(animationClass)">
     <div class="toast show" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header @(SetBorderColor())">
             @switch(Message?.Type)
