--- a/src/Layout/MainLayout.razor
+++ b/src/Layout/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 <div id="envBorder" class="@borderClassName">
-    <div class="text-center borderText">@Env.Environment</div>
+    <div class="text-center borderText">@borderName</div>
 </div>
 <div id="mainContainer" class="bg-light vh-100">
     <div id="headerContainer" class="bg-accent1">
