--- a/src/Areas/Demo/Components/ColorSwatch.razor
+++ b/src/Areas/Demo/Components/ColorSwatch.razor
@@ -1,7 +1,13 @@
-﻿<div  @onmouseover="@(() => OpenToolTip(this.Name))" class="col colorSwatch me-3 d-flex">
-    <div id="@Id" @ref="element" class="row align-content-center text-center swatch bg-@(Name.ToLower())">
-        <p class="text-light text-center fw-bolder @(Name.ToLower() == "light"  ? "text-dark" : "text-light")">@(Name.ToLower()[0].ToString().ToUpper() + Name.Substring(1))</p>
-        <p class="text-light text-center fw-bolder @(Name.ToLower() == "light"  ? "text-dark" : "text-light")">@(rgbString!.Replace(" ", ""))</p>
-        <p class="me-0 text-light text-center fw-bolder @(Name.ToLower() == "light"  ? "text-dark" : "text-light")">@(hexString)</p>
+﻿<div @onmouseover="@(() => OpenToolTip(this.Name))" class="col colorSwatch me-3 d-flex">
+    <div id="@id" @ref="element" class="row align-content-center text-center swatch bg-@(Name.ToLower())">
+        <p class="text-light text-center fw-bolder @(Name.ToLower() == "light"  ? "text-dark" : "text-light")">
+            @(Name.ToLower()[0].ToString().ToUpper() + Name.Substring(1))
+        </p>
+        <p class="text-light text-center fw-bolder @(Name.ToLower() == "light"  ? "text-dark" : "text-light")">
+            @(rgbString!.Replace(" ", ""))
+        </p>
+        <p class="me-0 text-light text-center fw-bolder @(Name.ToLower() == "light"  ? "text-dark" : "text-light")">
+            @(hexString)
+        </p>
     </div>
 </div>
