--- a/src/Layout/Components/Footer.razor
+++ b/src/Layout/Components/Footer.razor
@@ -1,3 +1,3 @@
 ﻿<div class="footer bg-primary m-0 p-0" id="footer">
-    <div class="text-white p-3 fw-bold">&copy; @CurrentYear </div>
+    <div class="text-white p-3 fw-bold">&copy; @currentYear </div>
 </div>
