--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -7,9 +7,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Blazor.Frontend.Bootstrap
-@using Blazor.Frontend.Bootstrap.Areas.Demo
-@using Blazor.Frontend.Bootstrap.Areas.Demo.Components
-@using Blazor.Frontend.Bootstrap.Layout
-@using Blazor.Frontend.Bootstrap.Layout.Components
-@using Blazor.Frontend.Bootstrap.Classes
+@using Frontend.Blazor.Bootstrap
+@using Frontend.Blazor.Bootstrap.Areas.Demo
+@using Frontend.Blazor.Bootstrap.Areas.Demo.Components
+@using Frontend.Blazor.Bootstrap.Layout
+@using Frontend.Blazor.Bootstrap.Layout.Components
+@using Frontend.Blazor.Bootstrap.Classes
