--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -7,9 +7,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Frontend.Blazor.Bootstrap
-@using Frontend.Blazor.Bootstrap.Areas.Demo
-@using Frontend.Blazor.Bootstrap.Areas.Demo.Components
-@using Frontend.Blazor.Bootstrap.Layout
-@using Frontend.Blazor.Bootstrap.Layout.Components
-@using Frontend.Blazor.Bootstrap.Classes
+@using Frontend.Blazor.Tailwind
+@using Frontend.Blazor.Tailwind.Areas.Demo
+@using Frontend.Blazor.Tailwind.Areas.Demo.Components
+@using Frontend.Blazor.Tailwind.Layout
+@using Frontend.Blazor.Tailwind.Layout.Components
+@using Frontend.Blazor.Tailwind.Classes
